# Easy2Read

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build_error.txt  build_output.txt  cmake_configure_debug.txt  cmake_error.txt  cmake_output.txt  vcpkg.json
Data/SKSE/Plugins/: Easy2Read.ini  Easy2Read_Theme.ini
Data/SKSE/Plugins/Easy2Read/ImageMappings/: Scribes of Skyrim.ini  Vanilla.ini
Presets/Untarnished UI/SKSE/Plugins/: Easy2Read_Theme.ini
src/: PCH.h  main.cpp
src/Config/: Settings.cpp  Settings.h
src/Hooks/: D3D11Hook.cpp  D3D11Hook.h  InputHandler.cpp  InputHandler.h  MenuControlsHook.cpp  MenuControlsHook.h  MenuWatcher.cpp  MenuWatcher.h  TextHooks.cpp  TextHooks.h
src/TextSanitization/: TextSanitizer.cpp  TextSanitizer.h
src/UI/: Overlay.cpp  Overlay.h
src/Utils/: AliasResolver.cpp  AliasResolver.h  BookUtils.cpp  BookUtils.h  ImageMappings.cpp  ImageMappings.h
